[package]
name = "twir"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extract"
path = "src/extract.rs"

[[bin]]
name = "markdown"
path = "src/markdown.rs"

[[bin]]
name = "feed"
path = "src/feed.rs"


[dependencies]
feed-rs = "2.3.1"
html-escape = "0.2.13"
scraper = "0.26.0"
serde_json = "1.0.149"
ureq = { version = "3.3.0", features = ["json"] }
